--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "nodemon": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+    "build": "build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.5.7",
+    "@swc/helpers": "^0.5.11",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "@types/pg": "^8.11.6",
@@ -19,7 +24,10 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "regenerator-runtime": "^0.14.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "prettier": {
@@ -32,7 +40,10 @@
     "bracketSpacing": true
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "helmet": "^7.1.0",
+    "pg": "^8.11.5",
+    "prisma": "^5.13.0"
   }
 }
