--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -113,5 +113,8 @@
     }
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src", "src/**/*"]
+  "include": ["src", "src/**/*"],
+  "ts-node": {
+    "swc": true
+  }
 }
