--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "zod": "^3.23.8"
   }
