--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.11",
     "@types/pg": "^8.11.6",
+    "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
@@ -52,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.5",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   }
 }
