--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
     "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -52,6 +53,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "pg": "^8.11.5",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
