--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@swc/core": "^1.5.7",
     "@swc/helpers": "^0.5.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -48,6 +49,7 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
