--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
+    "vite-bundle-visualizer": "^1.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
