--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,12 @@
   },
   "keywords": [],
   "author": "",
+  "prisma": {
+    "seed": "ts-node prisma/seed/seed.ts"
+  },
   "license": "ISC",
   "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
     "@swc/core": "^1.5.7",
     "@swc/helpers": "^0.5.11",
     "@types/bcrypt": "^5.0.2",
@@ -22,7 +26,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.16.5",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
     "@types/validator": "^13.12.0",
@@ -34,6 +38,7 @@
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "prisma": "^5.14.0",
+    "randomstring": "^1.3.0",
     "regenerator-runtime": "^0.14.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
@@ -62,5 +67,8 @@
     "pg": "^8.11.5",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
+  },
+  "@snaplet/seed": {
+    "config": "prisma/seed/seed.config.ts"
   }
 }
