--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.10.5",
     "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
