--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.10.5",
+    "@amcharts/amcharts5-geodata": "^5.1.4",
     "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
