--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@amcharts/amcharts5-geodata": "^5.1.4",
     "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.36.0",
+    "@types/ua-parser-js": "^0.7.39",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
+    "ua-parser-js": "^1.0.39",
     "vite-bundle-visualizer": "^1.2.1",
     "zod": "^3.23.8"
   },
