--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "prisma": "^5.14.0",
+    "random-url": "^1.0.0",
     "randomstring": "^1.3.0",
     "regenerator-runtime": "^0.14.1",
     "ts-node": "^10.9.2",
