--- a/server/package.json
+++ b/server/package.json
@@ -60,12 +60,15 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "location-from-ip": "^1.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.11.5",
+    "redis": "^4.7.0",
+    "uninstall": "^0.0.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
